fixed the spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ html, body {
   display: flex;
 }
 
+
 .App {
   width: 100%;
   display: flex;
@@ -15,9 +16,8 @@ html, body {
   /* margin: 0; */
   /* font-size: 16px; */
   height: 100%;
-  display: inline-block;
-  transform: scale(0.8);
-  transform-origin: top left;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .footer {
