--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -25,8 +25,9 @@ body {
     padding-bottom: 34px;
     background-color: transparent;
     margin-top: 4em;
-    margin-right: 17em;
-    margin-left: 17em;
+    margin-right: 12em;
+    margin-left: 12em;
+    width: 70%;
 }
 
 .bitmoji {
